# obsmind

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/obsmind/: cli.py
src/obsmind/commands/: ask.py  config.py  connect.py  daily.py  generate.py  inbox.py  note.py  project.py  review.py  standup.py  view.py
src/obsmind/core/: ai.py  context.py  index.py  obsflow.py  prompts.py  render.py  retrieval.py  sections.py  update_check.py  usage.py  vault.py
src/obsmind/core/profiles/: README.md  __init__.py  base.py  dev.py
src/obsmind/prompts/: ask.md  connect.md  daily_clarify.md  daily_fill.md  daily_from_summary.md  daily_reflect.md  daily_summary.md  daily_update.md  edit.md  enhance.md  extend.md  find.md  fix.md  generate.md  inbox_route.md  note_autolink.md  prioritise.md  project_status.md  review.md  rewrite.md  standup.md  summarise.md  tags.md
tests/: test_ai.py  test_ask_cmd.py  test_config_cmd.py  test_connect_cmd.py  test_context.py  test_daily_cmd.py  test_generate_cmd.py  test_inbox_cmd.py  test_index.py  test_note_cmd.py  test_obsflow.py  test_project_cmd.py  test_retrieval.py  test_review_cmd.py  test_sections.py  test_standup_cmd.py  test_usage.py  test_vault.py
