[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsmind"
version = "0.1.0"
description = "ObsMind — AI companion for your Obsidian vault"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "anthropic>=0.49.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
obsmind = "obsmind.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/obsmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
